--- a/test/fixtures/authentications.yml
+++ b/test/fixtures/authentications.yml
@@ -1,9 +1,21 @@
 # Read about fixtures at http://ar.rubyonrails.org/classes/Fixtures.html
 
 one:
-  username: MyString
-  password: MyString
+  username: santhosh
+  password: pass
 
 two:
-  username: MyString
-  password: MyString
+  username: santhoshonet@gmail.com
+  password: password@123
+
+three:
+  username: "santhoshonet@gmail.com"
+  password: ""
+
+four:
+  username: ""
+  password: ""
+
+five:
+  username: nil
+  password: nil
