--- a/config/amazon_s3.yml
+++ b/config/amazon_s3.yml
@@ -1,5 +1,5 @@
 development:
-  bucket: "ContractRight"
+  bucket: "contractright_development"
   access_key_id: "AKIAIW36YM46YELZCT3A"
   secret_access_key: "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"
   max_file_size: 10485760
